      # characters before storing.
    - Modified ACM portal fetcher due to web site changes.
    - Improvements to IEEEXplore fetcher - better handling of month and page fields.
    - Changed behaviour of source panel when an entry contains imbalanced # characters -
      the panel can now show the entry in its invalid form, allowing the user to fix the problem.
    - Fixed bug in parsing file field - double spaces in file names would be reduced to single
      spaces, breaking the file link. Fix submitted by Uwe Kuehn.
    - Fixed bug in HTMLConverter.
    - Fixed NullPointerException in key generator for incomplete names.
    - Fixed bug in removing custom export filters.
    - Fixed bug 2225371: restart is no longer required after adding a new custom export filter. 
    - Fixed bug in "Move/rename file" feature in file field editor with regard to undefined
      file directory.
    - Fixed bug in Ris importer.
    - Fixed NullPointerException in Endnote importer.
2.4.2
    - Added missing layout formatters FirstPagd LastPage.
    - Fixed a bug regarding ParamLayoutFormatter loaded from plugin.
    - Fixed crash during initalization of journal abbreviation list.
    - Added option to have JabRef search for external file when "Open file" function is chosen
      for an entry without any linked files. This is similar to what was always done in
      JabRef 2.3.1 and earlier. 
    - Improved regular expression file search, so the regular expression can contain field
      markers as used for BibTeX key generation in addition to just regular fields. It is
      no longer possible to call arbitrary layout formatters, but the modifiers "upper",
      "lower" and "abbr" (for case conversion and abbreviation) can be used.
    - Ris importer now imports PB as "school" instead of "publisher" for THES entries.
    - Fixed bug 2157664: Current edit is now treated as an undoable edit in itself.
2.4.1